--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Samandar </h1>
-    <h1>Iskandar buyuk</h1>
+ <header>
+    
+ </header>
 </body>
 </html>
