--- a/index.html
+++ b/index.html
@@ -1,13 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
- <header>
-    
- </header>
-</body>
+  </head>
+  <body>
+    <header></header>
+    <main>
+      <!-- About qismi start -->
+      <section class="about">
+        <div class="about_in">
+          <h1>About Our University</h1>
+          <p>
+            Only when different values, experiences and perspectives are met
+            with free and open discourse can education be truly transformative..
+          </p>
+          <div class="owl_carusel">
+            <div class="owl-1">
+              <img src="./images/about-image-2.png" alt="images 1" />
+              <div class="owl_text">
+                <span>Campus Information</span>
+                <h2>Where Knowledge Meets Innovation</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusm tem incid idunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim iam quis nostrud xerci tation ulla mco laboris
+                  nisi ut
+                </p>
+                <a class="owl-btn" href="">Schedule A Tour</a>
+              </div>
+            </div>
+            <div class="owl-1">
+              <img src="./images/about-image-3.png" alt="images 2" />
+              <div class="owl_text">
+                <span>Campus Information</span>
+                <h2>Where Knowledge Meets Innovation</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusm tem incid idunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim iam quis nostrud xerci tation ulla mco laboris
+                  nisi ut
+                </p>
+                <a class="owl-btn" href="">Schedule A Tour</a>
+              </div>
+            </div>
+            <div class="owl-1">
+              <img src="./images/about-image-4.png" alt="images 3" />
+              <div class="owl_text">
+                <span>Campus Information</span>
+                <h2>Where Knowledge Meets Innovation</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusm tem incid idunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim iam quis nostrud xerci tation ulla mco laboris
+                  nisi ut
+                </p>
+                <a class="owl-btn" href="">Schedule A Tour</a>
+              </div>
+            </div>
+            <div class="owl-1">
+              <img src="./images/about-image-4.png" alt="images 4" />
+              <div class="owl_text">
+                <span>Campus Information</span>
+                <h2>Where Knowledge Meets Innovation</h2>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusm tem incid idunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim iam quis nostrud xerci tation ulla mco laboris
+                  nisi ut
+                </p>
+                <a class="owl-btn" href="">Schedule A Tour</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About qismi end -->
+    </main>
+  </body>
 </html>
