--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
-</head>
-<body>
- <header>
-    
- </header>
-</body>
+    <!-- ===========icon cdn=========== -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <!-- ===============css link============ -->
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <header>
+      <!-- ======================header================== -->
+      <div class="header">
+        <!-- =================header img================== -->
+        <div class="header_logo">
+          <img src="./images/header_logo.png" alt="" />
+        </div>
+        <!--===============header menu============== -->
+        <div class="header_menu">
+          <ul>
+            <li>home <i class="fa-solid fa-chevron-down"></i></li>
+            <li>pages <i class="fa-solid fa-chevron-down"></i></li>
+            <li>
+              academics <i class="fa-solid fa-chevron-down"></i>
+            </li>
+            <li>
+              Admissions<i class="fa-solid fa-chevron-down"></i>
+            </li>
+            <li>Courses<i class="fa-solid fa-chevron-down"></i></li>
+            <li>
+              University Life <i class="fa-solid fa-chevron-down"></i>
+            </li>
+            <li>Contact<i class="fa-solid fa-chevron-down"></i></li>
+          </ul>
+        </div>
+        <!-- ===============header  btn ========-->
+        <div class="header_btn">
+          <button>Contact Us</button>
+        </div>
+
+        <!-- =============header search ============ -->
+        <div class="header_search">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+      </div>
+    </header>
+
+    <!-- =================icon cdn jquare======= -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-JobWAqYk5CSjWuVV3mxgS+MmccJqkrBaDhk8SKS1BW+71dJ9gzascwzW85UwGhxiSyR7Pxhu50k+Nl3+o5I49A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </body>
 </html>
