--- a/index.html
+++ b/index.html
@@ -22,52 +22,91 @@
   <body>
     <header>
       <!-- ======================header================== -->
-   <div class="header_bg">
-    <img src="./images/headerbg-Image-1.jpg" alt="">
-   </div>
+
       <div class="header">
-        <!-- =================header img================== -->
-        <div class="header_logo">
-          <img src="./images/header_logo.png" alt="" />
-        </div>
-
-        <div class="header_df">
-          <!--===============header menu============== -->
-          <div class="header_menu">
-            <ul>
-              <li class="header_lico"><a href="">home <i class=" icon fa-solid fa-chevron-down"></i></a></li>
-              <li> <a href="">pages <i class="icon fa-solid fa-chevron-down"></i> </a></li>
-              <li><a href="">
-                academics <i class=" icon fa-solid fa-chevron-down"></i>
-            </a>
-              </li>
-              <li><a href="">
-                Admissions<i class=" icon fa-solid fa-chevron-down"></i>
-            </a>
-              </li>
-              <li> <a href="">Courses<i class="icon fa-solid fa-chevron-down"></i></a></li>
-              <li><a href="">
-                University Life
-                <i class="icon fa-solid fa-chevron-down"></i>
-            </a>
-              </li>
-              <li> <a href="">Contact</a></li>
-            </ul>
+        <div class="header_in">
+          <!-- =================header img================== -->
+          <div class="header_logo">
+            <img src="./images/header_logo.png" alt="" />
           </div>
 
-          <!-- ===============header  btn ========-->
-          <div class="header_btn">
-            <button>Contact Us</button>
-          </div>
+          <div class="header_df">
+            <!--===============header menu============== -->
+            <div class="header_menu">
+              <ul>
+                <li class="header_lico">
+                  <a href=""
+                    >home <i class="icon fa-solid fa-chevron-down"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href=""
+                    >pages
+                    <i class="icon fa-solid fa-chevron-down"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    academics
+                    <i class="icon fa-solid fa-chevron-down"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    Admissions<i
+                      class="icon fa-solid fa-chevron-down"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href=""
+                    >Courses<i
+                      class="icon fa-solid fa-chevron-down"
+                    ></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="">
+                    University Life
+                    <i class="icon fa-solid fa-chevron-down"></i>
+                  </a>
+                </li>
+                <li><a href="">Contact</a></li>
+              </ul>
+            </div>
 
-          <!-- =============header search ============ -->
-          <div class="header_search">
-            <i class=" fa-solid fa-magnifying-glass"></i>
+            <!-- ===============header  btn ========-->
+            <div class="header_btn">
+              <button>Contact Us</button>
+            </div>
+
+            <!-- =============header search ============ -->
+            <div class="header_search">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
           </div>
         </div>
       </div>
     </header>
-
+    <div class="header_bg">
+      <div class="header_bg_img">
+        <img src="./images/headerbg-Image-1.jpg" alt="" />
+      </div>
+      <div class="header_bgtext">
+        <p>The Best University of The State</p>
+        <h1>Transformative Education</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum
+          available, but the majority have suffered altera some
+          injected humour, or randomised words which don't look even
+          slightly believable.
+        </p>
+      </div>
+      <div class="header_bgbtn">
+        <button>Apply to USD</button>
+        <button>Chat with Us</button>
+      </div>
+    </div>
     <!-- =================icon cdn jquare======= -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -152,8 +191,6 @@
       </section>
       <!-- About qismi end -->
     </main>
-
-
 
     <script src="./app.js"></script>
   </body>
