--- a/index.html
+++ b/index.html
@@ -34,42 +34,90 @@
             <!--===============header menu============== -->
             <div class="header_menu">
               <ul>
-                <li class="header_lico">
+                <li class="header_drob header_color">
                   <a href=""
                     >home <i class="icon fa-solid fa-chevron-down"></i
                   ></a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>Home One</li>
+                      <li>Home Two</li>
+                      <li>Home Three</li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header_drob">
                   <a href=""
                     >pages
                     <i class="icon fa-solid fa-chevron-down"></i>
                   </a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>About Us</li>
+                      <li>News and Blog</li>
+                      <li>Blog Details</li>
+                      <li>Alumni</li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header_drob">
                   <a href="">
                     academics
                     <i class="icon fa-solid fa-chevron-down"></i>
                   </a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>Academics</li>
+                      <li>Undergraduate</li>
+                      <li>Graduate</li>
+                      <li>Online Education</li>
+                      <li>Faculty</li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header_drob">
                   <a href="">
                     Admissions<i
                       class="icon fa-solid fa-chevron-down"
                     ></i>
                   </a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>Admissions</li>
+                      <li>How to Apply</li>
+                      <li>Tuition & Fees</li>
+                      <li>Date & Deadlines</li>
+                      <li>Schedule a Tour</li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header_drob">
                   <a href=""
                     >Courses<i
                       class="icon fa-solid fa-chevron-down"
                     ></i
                   ></a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>Courses Sidebar</li>
+                      <li>Course Details</li>
+                    </ul>
+                  </div>
                 </li>
-                <li>
+                <li class="header_drob">
                   <a href="">
                     University Life
                     <i class="icon fa-solid fa-chevron-down"></i>
                   </a>
+                  <div class="custom_select">
+                    <ul class="options">
+                      <li>University Life</li>
+                      <li>The Campus Experience</li>
+                      <li>Support & Guidance</li>
+                      <li>Fitness & Athletics</li>
+                      <li>Fitness & Athletics</li>
+                    </ul>
+                  </div>
                 </li>
                 <li><a href="">Contact</a></li>
               </ul>
@@ -82,7 +130,9 @@
 
             <!-- =============header search ============ -->
             <div class="header_search">
-              <i class="fa-solid fa-magnifying-glass"></i>
+              <i
+                class="header_search fa-solid fa-magnifying-glass"
+              ></i>
             </div>
           </div>
         </div>
@@ -95,7 +145,7 @@
       <div class="header_bgtext">
         <p>The Best University of The State</p>
         <h1>Transformative Education</h1>
-        <p>
+        <p class="header_many">
           There are many variations of passages of Lorem Ipsum
           available, but the majority have suffered altera some
           injected humour, or randomised words which don't look even
@@ -103,8 +153,8 @@
         </p>
       </div>
       <div class="header_bgbtn">
-        <button>Apply to USD</button>
-        <button>Chat with Us</button>
+        <button class="header_bgbtn_1"><h4>Apply to USD</h4></button>
+        <button class="header_bgbtn_2"><h4>Chat with Us</h4></button>
       </div>
     </div>
     <!-- =================icon cdn jquare======= -->
@@ -119,9 +169,9 @@
   </head>
   <body> -->
 
-    <main>
-      <!-- About qismi start -->
-      <section class="about">
+    <!-- <main> -->
+    <!-- About qismi start -->
+    <!-- <section class="about">
         <div class="about_in">
           <h1>About Our University</h1>
           <p>
@@ -188,9 +238,9 @@
             </div>
           </div>
         </div>
-      </section>
-      <!-- About qismi end -->
-    </main>
+      </section> -->
+    <!-- About qismi end -->
+    <!-- </main> -->
 
     <script src="./app.js"></script>
   </body>
