--- a/index.html
+++ b/index.html
@@ -18,8 +18,119 @@
 
     <!-- ===============css link============ -->
     <link rel="stylesheet" href="./css/main.css" />
+
+    <!-- ==============responsiv css link========= -->
+    <link rel="stylesheet" href="./css/responsiv.css" />
   </head>
   <body>
+    <!-- ================telefon========== -->
+    <div class="telefon">
+      <div class="telefon_header">
+        <div class="telefon_img">
+          <img src="./images/header_logo.png" alt="" />
+        </div>
+        <div class="telefon_close">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <!-- =============menu============== -->
+      <div class="telefon_menu">
+        <ul>
+          <li class="telefon_select">
+            <p>
+              <span>home</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>Home One</li>
+                <li>Home Two</li>
+                <li>Home Three</li>
+              </ul>
+            </div>
+          </li>
+          <li class="telefon_select">
+            <p>
+              <span>pages</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>About Us</li>
+                <li>News and Blog</li>
+                <li>Blog Details</li>
+                <li>Alumni</li>
+              </ul>
+            </div>
+          </li>
+          <li class="telefon_select">
+            <p>
+              <span> academics</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>Academics</li>
+                <li>Undergraduate</li>
+                <li>Graduate</li>
+                <li>Online Education</li>
+                <li>Faculty</li>
+              </ul>
+            </div>
+          </li>
+          <li class="telefon_select">
+            <p>
+              <span>Admissions</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>Admissions</li>
+                <li>How to Apply</li>
+                <li>Tuition & Fees</li>
+                <li>Date & Deadlines</li>
+                <li>Schedule a Tour</li>
+              </ul>
+            </div>
+          </li>
+          <li class="telefon_select">
+            <p>
+              <span>Courses</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>Courses Sidebar</li>
+                <li>Course Details</li>
+              </ul>
+            </div>
+          </li>
+          <li class="telefon_select">
+            <p>
+              <span> University Life</span>
+              <i class="icon fa-solid fa-chevron-down"></i>
+            </p>
+
+            <div class="telefon_cust">
+              <ul class="telefon_options">
+                <li>University Life</li>
+                <li>The Campus Experience</li>
+                <li>Support & Guidance</li>
+                <li>Fitness & Athletics</li>
+                <li>Fitness & Athletics</li>
+              </ul>
+            </div>
+          </li>
+          <li><p>Contact</p></li>
+        </ul>
+      </div>
+    </div>
     <header>
       <!-- ======================header================== -->
 
@@ -134,15 +245,20 @@
                 class="header_search fa-solid fa-magnifying-glass"
               ></i>
             </div>
+            <div class="burger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
     </header>
-    <div class="header_bg">
-      <div class="header_bg_img">
+    <div class="header_hom">
+      <div class="header_hom_img">
         <img src="./images/headerbg-Image-1.jpg" alt="" />
       </div>
-      <div class="header_bgtext">
+      <div class="header_homtext">
         <p>The Best University of The State</p>
         <h1>Transformative Education</h1>
         <p class="header_many">
@@ -152,9 +268,9 @@
           slightly believable.
         </p>
       </div>
-      <div class="header_bgbtn">
-        <button class="header_bgbtn_1"><h4>Apply to USD</h4></button>
-        <button class="header_bgbtn_2"><h4>Chat with Us</h4></button>
+      <div class="header_hombtn">
+        <button class="header_hombtn_1"><h4>Apply to USD</h4></button>
+        <button class="header_hombtn_2"><h4>Chat with Us</h4></button>
       </div>
     </div>
     <!-- =================icon cdn jquare======= -->
@@ -164,14 +280,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body> -->
 
-    <!-- <main> -->
+
+    <main>
     <!-- About qismi start -->
-    <!-- <section class="about">
+    <section class="about">
         <div class="about_in">
           <h1>About Our University</h1>
           <p>
@@ -238,9 +351,9 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
     <!-- About qismi end -->
-    <!-- </main> -->
+    </main>
 
     <script src="./app.js"></script>
   </body>
