--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./css/responsiv.css" />
   </head>
   <body>
+    <div class="cover"></div>
     <!-- ================telefon========== -->
     <div class="telefon">
       <div class="telefon_header">
@@ -34,10 +35,11 @@
           <span></span>
         </div>
       </div>
+
       <!-- =============menu============== -->
       <div class="telefon_menu">
         <ul>
-          <li class="telefon_select">
+          <li class="telefon_select telefon_color">
             <p>
               <span>home</span>
               <i class="icon fa-solid fa-chevron-down"></i>
@@ -127,8 +129,31 @@
               </ul>
             </div>
           </li>
-          <li><p>Contact</p></li>
+          <li class="telefon_select"><p>Contact</p></li>
         </ul>
+      </div>
+
+      <div class="telefon_contact">
+        <h4>Contact Info</h4>
+        <ul>
+          <li>
+            <i class="telofon_icon fa-solid fa-envelope"></i>
+            <span>contact@Clgunme.edu</span>
+          </li>
+          <li>
+            <i class="telofon_icon fa-solid fa-clock"></i>
+            <span> Mon - Fri: 9:00 - 18:00</span>
+          </li>
+          <li >
+            <i class="telofon_icon fa-brands fa-facebook-f"></i>
+            <i class="telofon_icon fa-brands fa-square-instagram"></i>
+            <i class="telofon_icon fa-brands fa-linkedin"></i>
+          </li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="telefon_btn">
+        <button>Contact Us</button>
       </div>
     </div>
     <header>
@@ -255,7 +280,7 @@
       </div>
     </header>
     <div class="header_hom">
-      <div class="header_hom_img">
+      <div class="header_hom img">
         <img src="./images/headerbg-Image-1.jpg" alt="" />
       </div>
       <div class="header_homtext">
@@ -273,6 +298,37 @@
         <button class="header_hombtn_2"><h4>Chat with Us</h4></button>
       </div>
     </div>
+
+
+<!-- ===============silider================= -->
+
+<div class="slider">
+    <div class="slider_text">
+        <p>The Campus Experience</p>
+        <p>One University, Many Places</p>
+    </div>
+
+    <div class="slider_img"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- =================icon cdn jquare======= -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -280,80 +336,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-
-
-    <main>
-    <!-- About qismi start -->
-    <section class="about">
-        <div class="about_in">
-          <h1>About Our University</h1>
-          <p>
-            Only when different values, experiences and perspectives
-            are met with free and open discourse can education be
-            truly transformative..
-          </p>
-          <div class="owl_carusel">
-            <div class="owl-1">
-              <img src="./images/about-image-2.png" alt="images 1" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-3.png" alt="images 2" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-4.png" alt="images 3" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-4.png" alt="images 4" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    <!-- About qismi end -->
-    </main>
 
     <script src="./app.js"></script>
   </body>
