--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- ===========icon cdn=========== -->
     <link
@@ -188,9 +185,7 @@
                 </li>
                 <li class="header_drob">
                   <a href="">
-                    Admissions<i
-                      class="icon fa-solid fa-chevron-down"
-                    ></i>
+                    Admissions<i class="icon fa-solid fa-chevron-down"></i>
                   </a>
                   <div class="custom_select">
                     <ul class="options">
@@ -204,9 +199,7 @@
                 </li>
                 <li class="header_drob">
                   <a href=""
-                    >Courses<i
-                      class="icon fa-solid fa-chevron-down"
-                    ></i
+                    >Courses<i class="icon fa-solid fa-chevron-down"></i
                   ></a>
                   <div class="custom_select">
                     <ul class="options">
@@ -241,9 +234,7 @@
 
             <!-- =============header search ============ -->
             <div class="header_search">
-              <i
-                class="header_search fa-solid fa-magnifying-glass"
-              ></i>
+              <i class="header_search fa-solid fa-magnifying-glass"></i>
             </div>
             <div class="burger">
               <span></span>
@@ -262,10 +253,9 @@
         <p>The Best University of The State</p>
         <h1>Transformative Education</h1>
         <p class="header_many">
-          There are many variations of passages of Lorem Ipsum
-          available, but the majority have suffered altera some
-          injected humour, or randomised words which don't look even
-          slightly believable.
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered altera some injected humour, or randomised
+          words which don't look even slightly believable.
         </p>
       </div>
       <div class="header_hombtn">
@@ -281,78 +271,31 @@
       referrerpolicy="no-referrer"
     ></script>
 
-
     <main>
-    <!-- About qismi start -->
-    <section class="about">
+      <!-- About qismi start -->
+      <section class="about">
         <div class="about_in">
-          <h1>About Our University</h1>
-          <p>
-            Only when different values, experiences and perspectives
-            are met with free and open discourse can education be
-            truly transformative..
+          <h1 class="about_title_h1">About Our University</h1>
+          <p class="about_title_p">
+            Only when different values, experiences and perspectives are met
+            with free and open discourse can education be truly transformative..
           </p>
-          <div class="owl_carusel">
-            <div class="owl-1">
-              <img src="./images/about-image-2.png" alt="images 1" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-3.png" alt="images 2" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-4.png" alt="images 3" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
-            </div>
-            <div class="owl-1">
-              <img src="./images/about-image-4.png" alt="images 4" />
-              <div class="owl_text">
-                <span>Campus Information</span>
-                <h2>Where Knowledge Meets Innovation</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit, sed do eiusm tem incid idunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim iam quis
-                  nostrud xerci tation ulla mco laboris nisi ut
-                </p>
-                <a class="owl-btn" href="">Schedule A Tour</a>
-              </div>
+          <div class="owl-1">
+            <img src="./images/about-image-2.png" alt="images 4" />
+            <div class="owl_text">
+              <span>Campus Information</span>
+              <h2>Where Knowledge Meets Innovation</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusm tem incid idunt ut labore et dolore magna aliqua. Ut enim
+                ad minim iam quis nostrud xerci tation ulla mco laboris nisi ut
+              </p>
+              <button class="owl-btn" href="">Schedule A Tour</button>
             </div>
           </div>
         </div>
       </section>
-    <!-- About qismi end -->
+      <!-- About qismi end -->
     </main>
 
     <script src="./app.js"></script>
