--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- =================owl carusel cdn============= -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- ===============css link============ -->
     <link rel="stylesheet" href="./css/main.css" />
 
@@ -144,7 +159,7 @@
             <i class="telofon_icon fa-solid fa-clock"></i>
             <span> Mon - Fri: 9:00 - 18:00</span>
           </li>
-          <li >
+          <li>
             <i class="telofon_icon fa-brands fa-facebook-f"></i>
             <i class="telofon_icon fa-brands fa-square-instagram"></i>
             <i class="telofon_icon fa-brands fa-linkedin"></i>
@@ -299,40 +314,53 @@
       </div>
     </div>
 
+    <!-- ===============silider================= -->
 
-<!-- ===============silider================= -->
-
-<div class="slider">
-    <div class="slider_text">
+    <div class="slidere">
+      <div class="slider_text">
         <p>The Campus Experience</p>
         <p>One University, Many Places</p>
+      </div>
+
+      <div class="slider_img">
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <div class="item_img">
+              <img src="./images/slider_1.png" alt="" />
+            </div>
+            <div class="item_text">
+          <h3>Washington D.C</h3>
+            </div>
+           <div class="item_btn">
+            <button>Virtual Tour</button>
+           </div>
+          </div>
+          <div class="item">
+            <div class="item_img">
+              <img src="./images/slider_2.png" alt="" />
+            </div>
+          </div>
+          <div class="item">
+            <div class="item_img">
+              <img src="./images/slider_3.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="slider_img"></div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- =================icon cdn jquare======= -->
+    <!-- =================carusel cdn jquare======= -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-JobWAqYk5CSjWuVV3mxgS+MmccJqkrBaDhk8SKS1BW+71dJ9gzascwzW85UwGhxiSyR7Pxhu50k+Nl3+o5I49A=="
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- ============================owl carusel cdn=================== -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
