--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
     <!-- ===============silider================= -->
 
-    <!-- <div class="slidere">
+    <div class="slidere">
       <div class="slider_text">
         <p>The Campus Experience</p>
         <p>One University, Many Places</p>
@@ -324,30 +324,54 @@
 
       <div class="slider_img">
         <div class="owl-carousel owl-theme">
+          <!-- ==============item 1============== -->
           <div class="item">
+            <!-- ======================item img========= -->
             <div class="item_img">
               <img src="./images/slider_1.png" alt="" />
             </div>
+            <!-- =========item text========== -->
             <div class="item_text">
-          <h3>Washington D.C</h3>
+              <h3>Washington D.C</h3>
             </div>
-           <div class="item_btn">
-            <button>Virtual Tour</button>
-           </div>
+            <!-- ===============item button============== -->
+            <div class="item_btn">
+              <button>Virtual Tour</button>
+            </div>
           </div>
+          <!-- ==============iytem 2=========== -->
           <div class="item">
             <div class="item_img">
               <img src="./images/slider_2.png" alt="" />
             </div>
+            <!-- =========item text========== -->
+            <div class="item_text">
+              <h3>Washington D.C</h3>
+            </div>
+            <!-- ====================item button========= -->
+            <div class="item_btn">
+              <button>Virtual Tour</button>
+            </div>
           </div>
+          <!-- =================item 3============= -->
           <div class="item">
             <div class="item_img">
               <img src="./images/slider_3.png" alt="" />
             </div>
+            <!-- =========item text========== -->
+            <div class="item_text">
+              <h3>Washington D.C</h3>
+            </div>
+            <!-- ====================item button========= -->
+            <div class="item_btn">
+              <button>Virtual Tour</button>
+            </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
+
+    <!-- ======================slaider and=================== -->
 
     <!-- =================carusel cdn jquare======= -->
     <script
