--- a/index.html
+++ b/index.html
@@ -373,6 +373,62 @@
 
     <!-- ======================slaider and=================== -->
 
+    <!--==================sports ================= -->
+
+    <div class="sports">
+      <div class="sports_text">
+        <p>Sports and Athletics</p>
+        <h2>Beyond the Bleachers: Diverse Sports & Activities</h2>
+      </div>
+      <div class="sports_card">
+        <!-- ================sports card 1 -->
+        <div class="sports_cards">
+          <div class="sports_cards_img">
+            <img src="./images/sports_card_1.png" alt="" />
+          </div>
+          <div class="sport_cards_text">
+            <h2>Home of Champions</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum
+              aviable but the majority have suffered alteration in
+              some form.
+            </p>
+            <a href="">National Championships</a>
+          </div>
+        </div>
+        <!-- ================sports card 2 -->
+        <div class="sports_cards">
+          <div class="sports_cards_img">
+            <img src="./images/sports_card_2.png" alt="" />
+          </div>
+          <div class="sport_cards_text">
+            <h2>Olympic Excellence</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum
+              aviable but the majority have suffered alteration in
+              some form.
+            </p>
+            <a href="">Medals</a>
+          </div>
+        </div>
+        <!-- ================sports card 3 -->
+        <div class="sports_cards">
+          <div class="sports_cards_img">
+            <img src="./images/sports_card_3.png" alt="" />
+          </div>
+          <div class="sport_cards_text">
+            <h2>Multidimensional Impact</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum
+              aviable but the majority have suffered alteration in
+              some form.
+            </p>
+            <a href="">Athlete Stories</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- =================carusel cdn jquare======= -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
